2008-12-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Emit ::icon-pressed regardless which button was
	pressed. Also make it explicit in the signal signature that the
	position parameter is a GtkEntryIconPosition.

2008-12-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Emit property notification for the text-length
	property.

2008-12-26  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/search_entry.c: Add a demo for new entry features.
	* demos/gtk-demo/Makefile.am: Glue

2008-12-25  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkapplaunchcontext.c:
	* gdk/gdkkeys.c:
	* gdk/x11/gdkdnd-x11.c:
	* gdk/x11/gdkkeyx-x11.c:
	* gdk/x11/gdktestutils-x11.c: Typo fixes and other small
	doc improvements.

2008-12-23  Li Yuan  <li.yuan@sun.com>

	* gtk/gtkiconview.c: (gtk_icon_view_accessible_model_row_changed):
	Bug #549251. No need to set name if there is no a11y item object.

2008-12-21  Yair Hershkovitz  <yairhr@gmail.com>

	Bug 565203: RTL locales: icons are misplaced when horizontal 
	            gtkiconview is contained in a gtkscrolledwindow.

	* gtk/gtkiconview.c (gtk_icon_view_layout_single_row):
	Fix horizontal icon positions when in RTL locale.

2008-12-19  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Update

2008-12-19  Matthias Clasen  <mclasen@redhat.com>

	Bug 564881 – gtkstatusicon.c: 'event' bug again

	* gtk/gtkstatusicon.c (button_callback): Fix the build.
	Patch by Christian Dywan.

2008-12-19  Cody Russell  <bratsche@gnome.org>

	Bug 85292 – add an icon to gtkentry

	* gtk/gtkmarshalers.list: Add VOID:INT,BOXED
	* tests/testentryicons.c: Initial icon entry test
	* tests/Makefile.am: Add testentryicons
	* gtk/gtkentry.[ch]: Add API for setting primary/secondary icons
	and other features related to them.
	
2008-12-19  Marek Kasik  <mkasik@redhat.com>

	Bug 339318 - Allow page rendering to (optionally) happen in a thread

	* gtk/gtk.symbols: API change
	* doc/reference/gtk/gtk-sections.txt: API change